--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -30,22 +30,9 @@ The key steps of the below are:
 5. Identifying the location of health facilities to use within a cost-distance analysis using the friction surface.
 
 
-*MRes Project: Task 8*
-Restructure code so it contains an initial section for user inputs relating to:
-* packages
-* area of interest
-* landsat 8 parameters
-* *NDVI parameters i.e. period of time over which to summarise NDVI*
-* travel speeds (walking and road)
-* population data parameters
-* health facility data
 
-
-### Setup process
-
-1. Setup: Packages
-* Download, install and load all packages needed to construct friction surface.
-
+### 1. Setup
+1a. Setup: Downloading, installing and loading all required packages (from both CRAN and GitHub servers)
 CRAN packages.
 ```{r setup_CRAN_packages}
 
@@ -78,7 +65,6 @@ if(length(new.packages)) install.packages(new.packages)
 lapply(list.of.packages, library, character.only = TRUE)
 
 ```
-As WorldPop packages cannot currently be downloaded via CRAN, these must be downloaded via GitHub.
 
 GitHub packages.
 ```{r setup_GitHub_packages}
@@ -129,7 +115,7 @@ library(afrihealthsites)
 All required packages should now be loaded.
 
 
-2. Setup: Country of interest (coi), used to obtain:
+1b. Setup: Define country of interest (coi), used to obtain:
 * WHO health facility data, downloaded via AfriMapR within script
 * Population data, downlaoded via WorldPop within script
 ```{r setup_country_of_intersest}
@@ -140,7 +126,7 @@ coi <- "Malawi"
 ```
 
 
-3. Setup: Area of interest (aoi)
+1c. Setup: Define area of interest (aoi)
 * Detail limits for a bounding box (lat/long maximum and minimum values, using WGS84 projection) to be used as area of interest (aoi)
 OR
 * Read in shapefile to define area of interest
@@ -160,7 +146,7 @@ bbymax <- -10.73
 ```
 
 
-4. Setup: Landsat 8 parameters
+1d. Setup: Landsat-8 parameters
 * Read in Landsat 8 data, obtained using Google Earth Engine (GEE) *download from within R?*
 * Define start and end dates to filter Landsat 8 data by
 This data will be used to calculate the median NDVI per pixel. NDVI values will then be used to generate friction surface and calculate travel times
@@ -176,12 +162,8 @@ end_date   <-  "2018-09-30"
 ```
 
 
-5. Setup: Travel speeds
-* Assign walking speeds to traverse NDVI pixels (non-road), depending on NDVI value
-* Assign travel speed to traverse road pixels (obtained using OpenStreetMaps) by motor vehicle
-
-Walking travel speed.
-*Documentation on reasonable walking speeds needed*
+1e. Setup: Define off-road (on-foot) travel speeds
+* Define walking travel speeds (non-vehicle, km/ hour) expected when traversing non-road pixels (defendant on NDVI value and customisable according to expected   changes in travel speed, e.g., during the wet season).
 ```{r setup_walking_travel_speeds}
 
 ## Define walking speeds (in Km/h) expected for the following NDVI values:
@@ -202,8 +184,9 @@ walk_speed_4 <- 1.49
 
 ```
 
-Road travel speed by motor vehicle.
-*OSM national speed limit data needed*
+
+1f. Setup: Define road travel speeds (km/ hour by motorcycle) for major and minor road types
+* Define road travel speeds (km/ hour by motor vehicle) for major and minor road types expected when traversing road pixels (road data obtained using OpenStreetMaps and customisable according to expected changes in travel speed, e.g., during the wet season).
 ```{r setup_walking_travel_speeds}
 
 ## Define road travel speeds (in Km/h) for the following road types:
@@ -219,23 +202,23 @@ minor_road_speed <- 20
 ```
 
 
-6. Setup: Population parameters
-* Obtain ISO3 country code for country of interest (coi), which is then used to generate covariate of interest 
-* Select and set covariate of interest by viewing dataframe of available covariates dowdnloaded from WorldPop FTP (for country of interest), which is used to download population data from the WorldPop FTP
+1g. Setup: Population parameters
+* Obtain available covariate data from the WorldPop FTP (for country of interest)
+* Select and set covariate of interest by viewing dataframe of available covariates downloaded from WorldPop FTP, which is later used to download population data from the WorldPop FTP
 ```{r setup_population_parameters}
 
-# Run 'population_data' function; constructed to return dataframe of available covariates downloaded from WorldPop FTP (for country of interest) based on 'coi', defined in setup stage 5: Health facility data
+# Run 'population_data' function, constructed to return dataframe of available covariates downloaded from WorldPop FTP (for country of interest) based on 'coi' (defined during setup stage 2: country of interest)
 population_data <- 
   
   function(coi){
     
-    # Obtain ISO3 country code for country of interest (coi) using 'wpgpListCountries' function
+    # Obtain ISO3 country codes using 'wpgpListCountries' function
     ISO3_df <- wpgpListCountries()
   
     # Identify ISO3 country code for country of interest (coi) and store as object
     ISO3 <- ISO3_df[ISO3_df$Country == coi, "ISO3"]
   
-    # Download dataset of available covariates for country of interest
+    # Download dataset of available covariates for country of interest and store as object
     covariates_df <- wpgpListCountryDatasets(ISO3 = ISO3)
     
     # Return dataframe
@@ -244,9 +227,9 @@ population_data <-
 }
 
 # Select and set covariate of interest by viewing dataframe of available covariates downloaded from WorldPop FTP (for country of interest)
-View(population_data(coi))
+# View(population_data(coi))
 
-# "ppp_2020": Estimated total number of people per grid-cell 2020
+# "ppp_2020": Estimated total number of people per grid-cell for year 2020
 
 # Store chosen covaraite as object
 covariate <- "ppp_2020"
@@ -276,7 +259,6 @@ Then, initialise GEE. This will check whether you have everything set up to use 
 We then initialise the rgee package. Once rgee is installed I believe you only need to do this once.
 
 Note that you need to link to a Google account that has been given GEE access to be able to complete this stage. As we'll also be using Google Drive for downloading and uploading data, we also need to include 'drive=TRUE'. 
-*Needed in setup? - To setup GoogleDrive account?*
 ```{r, eval=F}
 
 ee_Initialize(drive = TRUE)
@@ -285,7 +267,8 @@ ee_Initialize(drive = TRUE)
 Now we can use R to run code on Google Earth Engine. Note that lots of examples of translating GEE syntax to be used in rgee can be found here url{https://csaybar.github.io/rgee-examples/}.
 
 
-Then make this into a polygon by using xy combinations for each corner of the area of interest.
+
+2. Create polygon using xy combinations for each corner of the area of interest.
 ```{r, eval=F}
 
 aoi <- ee$Geometry$Polygon(coords=list(c(bbxmin, bbymax), 
@@ -296,18 +279,14 @@ aoi <- ee$Geometry$Polygon(coords=list(c(bbxmin, bbymax),
 ```
 
 
-Read in the Landsat 8 Tier 1 dataset
 
-*https://rpubs.com/ials2un/getlandsat*
-
-*Worth looking into this - implies we can source NDVI from Landsat 8 directly within R. It would require users to enter their USGS log in details but something to investigate, and associated details can be an input of the Shiny app.*
-
+### Landsat-8 satellite data
+3. Read in Landsat-8 Tier 1 satellite data
 ```{r, eval=F}
 
 ls8 <- ee$ImageCollection(ls8_data)
 
 ```
-
 
 Filter the LS8 collection by area & then by collection date
 ```{r, eval=F}
@@ -318,8 +297,7 @@ temporalFiltered <- spatialFiltered$filterDate(start_date, end_date)
 
 ```
 
-
-Create a cloud mask, apply the mask and calculate NDVI for the unmasked pixels
+4. Create a cloud mask, apply the mask and calculate NDVI for the unmasked pixels
 ```{r, eval=F}
 
 ndvilowcloud <- function(image) {
@@ -341,7 +319,6 @@ cloudlessNDVI = temporalFiltered$map(ndvilowcloud)
 
 ```
 
-
 Calculate the median NDVI per pixel and clip to the area of interest
 ```{r, eval=F}
 
@@ -350,7 +327,6 @@ medianimage <- cloudlessNDVI$median()$select('NDVI')
 medNDVIaoi <- medianimage$clip(aoi)
 
 ```
-
 
 View output
 ```{r, eval=F}
@@ -366,7 +342,11 @@ Map$addLayer(
 ```
 
 
-These data are all stored as an image within GEE. We can convert this image to a raster and download it using Google drive (drive) or Google Cloud Storage (gcs). More information on this can be obtained here url{https://r-spatial.github.io/rgee/reference/ee_as_raster.html} 
+6. Convert image to raster and download it using Google Drive (drive) or Google Cloud Storage (GCS)
+* These data are saved as an image within google earth engine (GEE). 
+* Convert data to raster and download using drive or GCS.
+* Raster is stored as .tif file in a temporary local folder, which can then be written to our data folder. 
+* More information on this process can be found here: url{https://r-spatial.github.io/rgee/reference/ee_as_raster.html} 
 ```{r, eval=F}
 
 med_ndvi <- ee_as_raster(
@@ -378,7 +358,6 @@ med_ndvi <- ee_as_raster(
 
 ```
 
-
 The TIFF file is stored in a temporary folder, which we can then write to our data folder. I'll write the code to save this as NDVIgee.tif for now rather than overwrite the NDVIexample.tif that is currently there (although both should be the same). The 'eval' parameter is still set to FALSE.
 ```{r, eval=F}
 
@@ -388,10 +367,13 @@ writeRaster(med_ndvi,
             overwrite=TRUE)
 
 ```
+*https://rpubs.com/ials2un/getlandsat*
+*Worth looking into this - implies we can source NDVI from Landsat 8 directly within R. It would require users to enter their USGS log in details but something to investigate, and associated details can be an input of the Shiny app.*
+
 
 
 ### OpenStreetMap data
-To detail travel speeds within our area of interest, we are utilising an open source road network which is publicly compiled and hosted on:
+7. To detail travel speeds within our area of interest, we are utilising an open source road network which is publicly compiled and hosted on:
 www.openstreetmap.org. 
 
 We can directly download OSM road data for our aoi within R. The bounding box is in the format c(xmin, ymin, xmax, ymax), using the limits defined earlier in the script.
@@ -408,19 +390,17 @@ q <- opq(bbox = aoi_bbox) %>%
      add_osm_feature(key = 'highway') %>%
      osmdata_sf()
 
+# Plot road data to check
 ggplot(q$osm_lines) + 
   geom_sf()
-
-
 
 ```
 
 
-### Assign speeds
-We now want to assign speeds to the NDVI pixels plus the roads
 
-#### NDVI pixels by walking speed
-Need to document how these speeds are determined and how they vary by season and location for example.
+### Assign travel speeds
+8a: Assign off-road (on-foot) travel speeds, dependent on NDVI values
+*Need to document how these speeds are determined and how they vary by season and location for example*.
 ```{r ndvireclass}
 
 # Temporarily read in NDVIexample from folder, which has been directly downloaded from GEE.
@@ -456,9 +436,9 @@ ndvi_assigned <- reclassify(ndvi_assigned, ndviwalk_mat)
 ```
 
 
-#### Roads by motor vehicle
-Again, need to document how these speeds are determined and how they may vary by season.
-We are currently using national speed limits as a maximum for primary and major roads.
+8b: Assign on-road (by motor vehicle) travel speeds to OpenStreetMaps (OSM) road data
+*Again, need to document how these speeds are determined and how they may vary by season*.
+* We are currently using national speed limits as a maximum for primary and major roads.
 ```{r toraster, warning=FALSE}
 
 # Primary = 80kph, secondary = 80kph, 'Other' road speed = 20 kph
@@ -480,9 +460,10 @@ osm_road_raster <- fasterize(roads.poly, ndvi_assigned, "time_secs", fun = 'min'
 ```
 
 
-#### Merge NDVI and road rasters together
-The next step is to merge data for on-road and off-road travel to create one cohesive friction surface.
-In areas where "road" and "off-road" cells overlap, the road values will be retained as these will be associated with the lowest cost (quickest speed).
+
+9. Merge ‘NVDI’ raster (ndvi_assigned) and road-data raster (osm_road_raster)
+* The next step is to merge data for on-road and off-road travel to create one cohesive friction surface.
+* In areas where "road" and "off-road" cells overlap, the road values will be retained as these will be associated with the lowest cost (quickest speed).
 ```{r genfriction}
 
 ## merge the NDVI and the OSM, retain the minimum value (this is the quickest cell crossing time)
@@ -496,34 +477,33 @@ writeRaster(friction_surface_motor,
 ```
 
 
-#### Heatlh facility data
-Downloads data and locations of documented health facilities within country of interest and crops to area of interest
+
+### Heatlh facility data
+10. Download and prepare health facility location data
+* Download prepare and view health facility location data from a World Health Organisation (WHO) database.
+* WHO health facility location data is obtained using the afrihealthsites function, as part of the afrimapr/afrihealthsites package.
 ```{r}
-
-# healthfac <- st_read("./data/healthfacexample.shp")
-
-
 
 ## WHO data
 mwi_healthfac_who <-  afrihealthsites(coi,
                                       datasource = 'who')
 
-# Check
-# View(mwi_healthfac_who)
-
-# Covert to SpatialPointsDataFrame
+# Covert to SpatialPointsDataFrame class
 mwi_healthfac_who_spdf <- as(mwi_healthfac_who, "Spatial")
 # SpatialPointsDataFrame 
 
 # Crop to extent of 'friction_surface_motor' raster
 mwi_healthfac_who_spdf_cropped <- raster::crop(mwi_healthfac_who_spdf, y = extent(friction_surface_motor))
 
-HF_list_WHO <- as.data.frame(mwi_healthfac_who_spdf_cropped)
-View(HF_list_WHO)
-kable(HF_list_WHO)
+# To view health facility location data, save mwi_healthfac_who_spdf_cropped as dataframe
+mwi_healthfac_who_data <- as.data.frame(mwi_healthfac_who_spdf_cropped)
+# Check
+# View(mwi_healthfac_who_data)
+# kable(mwi_healthfac_who_data)
 
 
 
+#################################################################################################################################################################
 ## 'Healthsites' data
 mwi_healthfac_healthsites <-  afrihealthsites(coi,
                                               datasource = 'healthsites')
@@ -609,12 +589,14 @@ mwi_mfl_cropped <- raster::crop(mwi_mfl_spdf, y = extent(friction_surface_motor)
 # SpatialPointsDataFrame
 HF_list_MFL <- as.data.frame(mwi_mfl_cropped)
 kable(HF_list_MFL)
-
+#################################################################################################################################################################
 
 ```
 
 
+
 ### Calculate shortest paths
+11. Calculate shortest paths
 ```{r, warning=FALSE}
 # First calculate the transition matrix
 # Check the transitionFunction
@@ -631,7 +613,9 @@ writeRaster(leastcost_motor,
 ```
 
 
-Now create some plots of the data.
+
+### Create plot
+12. Create plot to visualise 'leastcost_motor' raster data
 ```{r, warning=FALSE}
 
 ## warning for removing NA pixels is masked
@@ -642,7 +626,16 @@ lcm_df$mins <- lcm_df$layer/60
 # Create simple features POINT geometry from health facility data to plot
 healthfac_data_plot <- st_as_sf(mwi_healthfac_who_spdf_cropped)
 
-# Plot
+## Plot
+# Time-boundary thresholds from closest-proximity health facility set to:
+# < 30 minutes
+# < 1 hour
+# < 3 hours
+# < 6 hours
+# < 12 hours
+# < 24 hours
+#> 24 hours
+
 ggplot()+
     geom_raster(data=lcm_df, aes(x = x, y = y, fill = cut(mins, c(0,30,60,120,180,360,720,max(mins)))))+
     scale_fill_brewer(palette = "YlGnBu")+
@@ -650,25 +643,13 @@ ggplot()+
     geom_sf(data=healthfac_data_plot, size=2, colour="red")+
     guides(fill=guide_legend(title="Time (mins)"))
 
-
 ```
 
 
-*### MRes_mini_project: Task_7*
 
-Add in population rasters, and calculate the number/proportion of the population living within a range of travel time thresholds. There are R packages for Worldpop which may be of use (https://www.worldpop.org/sdi/plugins), plus Worldpop is in GEE so it's probably easiest to use this dataset. It's at 100m resolution.
-
-Download population raster from the WorldPop FTP, determine population within time-boundary zones from population rasters using reclasified time-boundary data (rather than polygons).
-
-Download population data (.tif) for country and covariate of interest (Malawi / entire population in 2020) from the WorldPop FTP and create raster from downloaded data
+### Population data
+13. Download population data (.tif) for country and covariate of interest (Malawi/entire population in 2020) from the WorldPop FTP and create raster from downloaded data
 ```{r download_population_data_and_create_raster}
-
-# Obtain ISO3 country code for country of interest (coi) using 'wpgpListCountries' function
-library(wpgpDownloadR)
-ISO3_df <- wpgpListCountries()
-  
-# Identify ISO3 country code for country of interest (coi) and store as object
-ISO3 <- ISO3_df[ISO3_df$Country == coi, "ISO3"]
 
 # Download  and read in dataset (.tif) for country and covariate of interest (based on ISO3 and covariate name set during setup stages)
 pop_data <- 
@@ -676,11 +657,7 @@ pop_data <-
   wpgpGetCountryDataset(ISO3 = ISO3,
                         covariate = covariate, 
                         destDir = "./WorldPop")
-
-# pop_data <- "./WorldPop/mwi_ppp_2020.tif"
-
 # Note: Downloaded .tif is ~50 MB: This is the entire country of Malawi
-# *Can just bbox be downloaded?*
 
 # Create raster
 pop_data <- raster(pop_data)
@@ -692,7 +669,7 @@ pop_data
 ```
 
 
-Resample 'pop_data' raster to match resolution of 'leastcost_motor'.
+14. Resample 'pop_data' raster to match resolution of 'leastcost_motor'.
 ```{r resample_pop_data}
 
 # Determine 'pop_data' resolution 
@@ -725,7 +702,7 @@ crs(pop_data)
 ```
 
 
-Reclassify 'leastcost_motor' raster to chosen time-boundary categorical zones.
+15. Reclassify 'leastcost_motor' raster to chosen time-boundary categorical zones.
 ```{r reclassify}
 
 ## Create new raster from 'lcm_df' dataframe
@@ -782,8 +759,7 @@ lcm_rcl_pop_data_df <- as.data.frame(lcm_pop_data_rcl, xy = TRUE)
 ```
 
 
-Determine population within each time-boundary zone. Summate the data to give total number of individuals within chosen time-boundary categorical zones and calculate % of total population within chosen time-boundary categorical zones.
-*Create for-loops?*
+16. Determine population within each time-boundary zone. Summate the data to give total number of individuals within chosen time-boundary categorical zones and calculate % of total population within chosen time-boundary categorical zones.
 ```{r determine_population_within_time-boundary_zones}
 
 # Determine population (within 'pop_data' raster), within time-boundary  zones (within 'lcm_pop_data_rcl') using 'zonal' function 
@@ -793,13 +769,13 @@ lcm_rcl_zone <- zonal(pop_data, lcm_pop_data_rcl, fun = sum)
 lcm_rcl_zone_df <- as.data.frame(lcm_rcl_zone, xy = TRUE)
 
 # Check
-View(lcm_rcl_zone_df)
+# View(lcm_rcl_zone_df)
 
 # Rename columns 
 colnames(lcm_rcl_zone_df)
 names(lcm_rcl_zone_df)[1] <- "Zone"
 names(lcm_rcl_zone_df)[2] <- "Zone Population"
-View(lcm_rcl_zone_df)
+# View(lcm_rcl_zone_df)
 
 # Replace time-boundary zone codes with chosen time-boundary categories
 lcm_rcl_zone_df$Zone <- c("< 30 minutes",
@@ -833,16 +809,28 @@ lcm_rcl_zone_df$"% Population" <-
 # Check
 lcm_rcl_zone_df
 
-# Check
-FS_output <- kable(lcm_rcl_zone_df,
-                   caption = "Percent (%) XYZ...")
+# Create new dataframe detailing number and percent (%) of population residing within pre-defined time-boundaries from the closest proximity health centre
+time_boundaries <- c("< 30 minutes", "< 1 hour", "< 3 hours", "< 6 hours", "< 12 hours", "< 24 hours")
+
+FS_output <- data.frame(time_boundaries,
+                        lcm_rcl_zone_df$` Total Population`,
+                        lcm_rcl_zone_df$`% Population`)
+
+# Rename columns
+names(FS_output)[1] <- "Time boundaries"
+names(FS_output)[2] <- "Number population"
+names(FS_output)[3] <- "Percent (%) population"
+
+# Check output using Kable formatting
+FS_output <- kable(FS_output,
+                   caption = "Number and percent (%) of population residing within pre-defined time-boundaries from the closest proximity health centre")
 
 FS_output
 
 ```
 
 
-Plot bar plot to visualise.
+17. Create blot bar plot to visualise % of total population within chosen time-boundary categorical zones
 ```{r}
 
 # Check
@@ -995,7 +983,7 @@ FS_MAP_barplot
 
 ```
 
-
+Just trying to make nice figure *delete*
 ```{r}
 
 bound_districts <- 
