--- a/access_global_local.Rmd
+++ b/access_global_local.Rmd
@@ -15,11 +15,13 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
+
 ### Overview
 
 This document aims to allow for fast and reproducible construction of friction surfaces detailing travel time to health facilities.
 There are several key components which are necessary to construct a friction surface, with the aim of the surface detailing the cost to travel through gridded cells (pixels) of a known size. 
 The work outlined here is produced at a 30m x 30m spatial resolution, with the area/country of interest being defined by the user.
+
 The key steps of the below are:
 1. Downloading Normalised Difference Vegetation Index (NDVI) data for the area of interest using Google Earth Engine.
   * The NDVI data will be used to determine cells for which the associated cost determines off-road travel. The premise for this is that dense vegetation (i.e. forests) will be more difficult to traverse than sparser vegetation (i.e. grass). Within this work, the biggest assumption is that **off-road travel will be achieved by foot/with a maximum speed** which is significantly slower than on-road travel.
@@ -32,7 +34,8 @@ The key steps of the below are:
 
 
 ### 1. Setup
-1a. Setup: Downloading, installing and loading all required packages (from both CRAN and GitHub servers)
+
+1a. Setup: Downloading, installing and loading all required packages (from both CRAN and GitHub servers) 
 CRAN packages.
 ```{r setup_CRAN_packages}
 
@@ -69,13 +72,12 @@ lapply(list.of.packages, library, character.only = TRUE)
 GitHub packages.
 ```{r setup_GitHub_packages}
 
-## Download, install and load packages:
-# * 'devtools', needed to download some packages from GitHub
-# * 'wpgpDownloadR' and 'wpgpCovariates', needed for downloading raster datasets from the WorldPop FTP
-# * 'afrimapr/afrihealthsites' package, needed for downloading healthcare facility data from AfriMapR/WHO
+## Download, install and load the following packages:
+# * 'devtools': needed to download  packages from GitHub
+# * 'wpgpDownloadR' and 'wpgpCovariates': needed to download raster datasets from the WorldPop FTP
+# * 'afrimapr/afrihealthsites' package: needed to download healthcare facility data from a World Health Organisation (WHO) database via the afrimapr project
 
 ## Check if package is installed, if not, install
-
 # 'devtools' package
 if(!("devtools" %in% installed.packages())){
 
@@ -116,8 +118,8 @@ All required packages should now be loaded.
 
 
 1b. Setup: Define country of interest (coi), used to obtain:
-* WHO health facility data, downloaded via AfriMapR within script
-* Population data, downlaoded via WorldPop within script
+* WHO health facility data (via afrimapr project)
+* Population data (via WorldPop FTP)
 ```{r setup_country_of_intersest}
 
 # * Set country of interest (coi) using British English spelling and capitalised first letter
@@ -127,19 +129,19 @@ coi <- "Malawi"
 
 
 1c. Setup: Define area of interest (aoi)
-* Detail limits for a bounding box (lat/long maximum and minimum values, using WGS84 projection) to be used as area of interest (aoi)
+* Detail limits for a bounding box (latitude/longitude maximum and minimum values using WGS84 projection) to be used as area of interest (aoi)
 OR
 * Read in shapefile to define area of interest
 ```{r setup_area_of_interest}
 
-# * Detail limits of bounding box (lat/long maximum and minimum values, in WGS84) to be used as area of interest (aoi)
+# * Detail limits of bounding box (llatitude/longitude maximum and minimum values, in WGS84) to be used as area of interest (aoi)
 bbxmin <- 33.2
 bbxmax <- 33.8
 bbymin <- -11.29
 bbymax <- -10.73
-## 'EarthEngine Geometry Object' created within markdown
 
-# OR:
+# OR
+
 # * Read in shapefile to define area of interest
 # aoi <- readOGR(dsn = "USER_DIRECTORY", layer = "USER_SHAPEFILE")
 
@@ -147,12 +149,12 @@ bbymax <- -10.73
 
 
 1d. Setup: Landsat-8 parameters
-* Read in Landsat 8 data, obtained using Google Earth Engine (GEE) *download from within R?*
-* Define start and end dates to filter Landsat 8 data by
-This data will be used to calculate the median NDVI per pixel. NDVI values will then be used to generate friction surface and calculate travel times
+* Read in Landsat-8 data, obtained using Google Earth Engine (GEE)
+* Define start and end dates to filter Landsat-8 data by
+This data will be used to calculate the median NDVI per pixel. NDVI values will then be used to generate friction surface and calculate off-road (on-foot) travel times.
 ```{r setup_landsat8_parameters}
 
-# * Read in landsat 8 data
+# * Read in landsat-8 data
 ls8_data <- "LANDSAT/LC08/C01/T1_RT_TOA"
 
 # * Define start and end dates to filter data by
@@ -163,7 +165,7 @@ end_date   <-  "2018-09-30"
 
 
 1e. Setup: Define off-road (on-foot) travel speeds
-* Define walking travel speeds (non-vehicle, km/ hour) expected when traversing non-road pixels (defendant on NDVI value and customisable according to expected   changes in travel speed, e.g., during the wet season).
+* Define walking travel speeds (non-vehicle, km/ hour) expected when traversing non-road pixels (defendant on NDVI value and customisable according to expected changes in travel speed, e.g., during the wet season).
 ```{r setup_walking_travel_speeds}
 
 ## Define walking speeds (in Km/h) expected for the following NDVI values:
@@ -186,15 +188,15 @@ walk_speed_4 <- 1.49
 
 
 1f. Setup: Define road travel speeds (km/ hour by motorcycle) for major and minor road types
-* Define road travel speeds (km/ hour by motor vehicle) for major and minor road types expected when traversing road pixels (road data obtained using OpenStreetMaps and customisable according to expected changes in travel speed, e.g., during the wet season).
+* Define road travel speeds (km/ hour by motor vehicle) for major and minor road types expected when traversing road pixels. Road data is obtained using OpenStreetMaps and road travel speeds are customisable according to expected changes in travel speed, e.g., during the wet season.
 ```{r setup_walking_travel_speeds}
 
 ## Define road travel speeds (in Km/h) for the following road types:
 
-# Major roads on which national speed limits can typically be reached (e.g., motorway and trunk roads)
+# Major roads: on which national speed limits can typically be reached (e.g., motorway and trunk roads)
 major_road_speed <- 80
 
-# Minor roads on which slower speeds would be expected (e.g., urban roads, dirt roads)
+# Minor roads: on which slower speeds would be expected (e.g., urban roads, dirt roads)
 minor_road_speed <- 20
 
 # These can be changed according to expected changes in travel speeds, e.g., during the wet season, etc.
@@ -235,37 +237,32 @@ population_data <-
 covariate <- "ppp_2020"
 
 ```
-All setup stages now complete.
 
 
-
-### NDVI data generation using rgee
-I keep having issues with the rgee package, so I suggest at some point we split this Rmd file so that we keep the GEE part in one file, and the cost-distance surface generation in another. Users can then either have the option of generating the NDVI in R, or using GEE directly, with the link to the code provided.
-
-This first bit is all about connecting to GEE via the rgee package. You should only need to run this next part once, but I keep having issues and have to start from scratch. 
-*Needed in setup?*
+1h. Setup: Connect to Google Earth Engine (GEE) via the 'rgee' package
+'ee_install' function only needs to be run once.
 ```{r, eval=F}
 
 ## Only need to run once
 # ee_install()
 
 ```
-
-
 Once completed it should say 'Well done! rgee was successfully set up in your system.' and will then prompt you to restart your system. It also suggests running ee_check however there may currently be an issue with this function so I suggest you don't run it.
 
-Then, initialise GEE. This will check whether you have everything set up to use GEE via R. If you don't additional steps will be described.
-
-We then initialise the rgee package. Once rgee is installed I believe you only need to do this once.
+Then, initialise GEE. This will check whether you have everything set up to use GEE via R. If you don't, additional steps will be described.
 
 Note that you need to link to a Google account that has been given GEE access to be able to complete this stage. As we'll also be using Google Drive for downloading and uploading data, we also need to include 'drive=TRUE'. 
+
+Run 'ee_Initialize' function and follow all steps within the console.
 ```{r, eval=F}
 
 ee_Initialize(drive = TRUE)
 
 ```
-Now we can use R to run code on Google Earth Engine. Note that lots of examples of translating GEE syntax to be used in rgee can be found here url{https://csaybar.github.io/rgee-examples/}.
+Now we can use R to run code on Google Earth Engine. Note that lots of examples of translating GEE syntax to be used in rgee can be found here: url{https://csaybar.github.io/rgee-examples/}.
 
+
+*All setup stages are now complete*
 
 
 2. Create polygon using xy combinations for each corner of the area of interest.
@@ -288,11 +285,13 @@ ls8 <- ee$ImageCollection(ls8_data)
 
 ```
 
-Filter the LS8 collection by area & then by collection date
+Filter the LS8 collection by area of interest and then by collection date
 ```{r, eval=F}
 
+# Filter by area of interest
 spatialFiltered <- ls8$filterBounds(aoi)
 
+# Filter by collection date
 temporalFiltered <- spatialFiltered$filterDate(start_date, end_date)
 
 ```
@@ -319,7 +318,7 @@ cloudlessNDVI = temporalFiltered$map(ndvilowcloud)
 
 ```
 
-Calculate the median NDVI per pixel and clip to the area of interest
+5. Calculate the median NDVI per pixel and clip to the area of interest
 ```{r, eval=F}
 
 medianimage <- cloudlessNDVI$median()$select('NDVI')
@@ -598,6 +597,7 @@ kable(HF_list_MFL)
 ### Calculate shortest paths
 11. Calculate shortest paths
 ```{r, warning=FALSE}
+
 # First calculate the transition matrix
 # Check the transitionFunction
 trans_motor <- transition(friction_surface_motor, transitionFunction = function(x){1/mean(x)}, directions = 8)
